@@ -5,9 +5,10 @@ import com.rakhesh.jobApp.model.JobPost;
 import com.rakhesh.jobApp.repo.JobRepo;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
+import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.multipart.MultipartFile;
 
-import java.util.ArrayList;
-import java.util.Arrays;
+import java.io.IOException;
 import java.util.List;
 
 @Service
@@ -16,8 +17,10 @@ public class JobService {
     @Autowired
     private JobRepo repo;
 
-    public void addJob(JobPost jobPost)
-    {
+    public void addJob(JobPost jobPost, MultipartFile imageFile) throws IOException {
+        jobPost.setPostImageName(imageFile.getOriginalFilename());
+        jobPost.setPostImageTYpe(imageFile.getContentType());
+        jobPost.setPostImageData(imageFile.getBytes());
         repo.save(jobPost);
     }
 
@@ -31,9 +34,16 @@ public class JobService {
         return repo.findById(jobId).orElse(new JobPost());
     }
 
-    public void updateJob(JobPost jobPost)
-    {
-         repo.save(jobPost);
+    public void updateJob(JobPost jobPost, MultipartFile imageFile, int jobId) throws IOException {
+        JobPost tempJobPost = repo.findById(jobId).orElseThrow(() -> new RuntimeException("not found"));
+        tempJobPost.setPostProfile(jobPost.getPostProfile());
+        tempJobPost.setPostTechStack(jobPost.getPostTechStack());
+        tempJobPost.setReqExperience(jobPost.getReqExperience());
+        tempJobPost.setPostDesc(jobPost.getPostDesc());
+        tempJobPost.setPostImageName(imageFile.getOriginalFilename());
+        tempJobPost.setPostImageTYpe(imageFile.getContentType());
+        tempJobPost.setPostImageData(imageFile.getBytes());
+        repo.save(jobPost);
     }
 
     public void deleteJob(int jobId)
@@ -43,15 +53,15 @@ public class JobService {
 
     public  void load()
     {
-        List<JobPost> jobs = new ArrayList<>(Arrays.asList(
-
-        new JobPost(1, "Java Developer", "Must have good experience in core Java and advanced Java", 2, List.of("Core Java", "J2EE", "Spring Boot", "Hibernate")),
-        new JobPost(2, "Frontend Developer", "Experience in building responsive web applications using React", 3, List.of("HTML", "CSS", "JavaScript", "React")),
-        new JobPost(3, "Data Scientist", "Strong background in machine learning and data analysis", 4, List.of("Python", "Machine Learning", "Data Analysis")),
-        new JobPost(4, "Network Engineer", "Design and implement computer networks for efficient data communication", 5, List.of("Networking", "Cisco", "Routing", "Switching")),
-        new JobPost(5, "Mobile App Developer", "Experience in mobile app development for iOS and Android", 3, List.of("iOS Development", "Android Development", "Mobile App")) ));
-
-        repo.saveAll(jobs);
+//        List<JobPost> jobs = new ArrayList<>(Arrays.asList(
+//
+//        new JobPost(1, "Java Developer", "Must have good experience in core Java and advanced Java", 2, List.of("Core Java", "J2EE", "Spring Boot", "Hibernate")),
+//        new JobPost(2, "Frontend Developer", "Experience in building responsive web applications using React", 3, List.of("HTML", "CSS", "JavaScript", "React")),
+//        new JobPost(3, "Data Scientist", "Strong background in machine learning and data analysis", 4, List.of("Python", "Machine Learning", "Data Analysis")),
+//        new JobPost(4, "Network Engineer", "Design and implement computer networks for efficient data communication", 5, List.of("Networking", "Cisco", "Routing", "Switching")),
+//        new JobPost(5, "Mobile App Developer", "Experience in mobile app development for iOS and Android", 3, List.of("iOS Development", "Android Development", "Mobile App")) ));
+//
+//        repo.saveAll(jobs);
     }
 
     public List<JobPost> searchByKeyword(String keyword){
